# NoahGameFrame

./: CMakeLists.txt  NoahGameFrame_Wiki.md
Diamas Project/source/: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  build.sh  build_asan.sh  build_debug.sh  build_msan.sh  build_native.sh  build_relwithdebinfo.sh  build_relwithdebinfo_gprof.sh  build_ubsan.sh  deploy.sh
Diamas Project/source/buildtool/: archive_build.py  cythonize.py  install.py  make_buildinfo.py  util.py
Diamas Project/source/buildtool/cmake/: CommonTargets.cmake  Compiler.cmake  Config.cmake  FindDirectX9.cmake  PythonTargets.cmake  Util.cmake
Diamas Project/source/cmake/Hunter/: config.cmake
Diamas Project/source/doc/: CMakeLists.txt  conf.py  doxyfile  doxyfile.in  header.html  layout.xml
Diamas Project/source/doc/_build/doctrees/: index.doctree
Diamas Project/source/doc/_build/html/: .buildinfo  searchindex.js
Diamas Project/source/doc/sphinx/: genindex.html  index.html  objects.inv  search.html
Diamas Project/source/doc/sphinx/.doctrees/: environment.pickle  index.doctree
Diamas Project/source/doc/sphinx/_static/: documentation_options.js
Diamas Project/source/src/: CMakeLists.txt
Diamas Project/source/src/client/: CMakeLists.txt
Diamas Project/source/src/client/CWebBrowser/: CMakeLists.txt  StdAfx.h  WebManager.cpp  WebManager.h  WebManager_impl.h  WebView.cpp  WebView.h
Diamas Project/source/src/client/EffectLib/: CMakeLists.txt  EffectData.cpp  EffectData.h  EffectElementBase.cpp  EffectElementBase.h  EffectElementBaseInstance.cpp  EffectElementBaseInstance.h  EffectInstance.cpp  EffectInstance.h  EffectManager.cpp  EffectManager.h  EffectMesh.cpp  EffectMesh.h  EffectMeshInstance.cpp  EffectMeshInstance.h  EffectUpdateDecorator.cpp  EffectUpdateDecorator.h  EmitterProperty.cpp  EmitterProperty.h  FrameController.cpp  FrameController.h  ParticleInstance.cpp  ParticleInstance.h  ParticleProperty.cpp  ParticleProperty.h  ParticleSystemData.cpp  ParticleSystemData.h  ParticleSystemInstance.cpp  ParticleSystemInstance.h  SimpleLightData.cpp  SimpleLightData.h  SimpleLightInstance.cpp  SimpleLightInstance.h  StdAfx.h  Type.cpp  Type.h  Util.cpp  Util.hpp
Diamas Project/source/src/client/EterBase/: CMakeLists.txt  CRC32.cpp  CRC32.h  DDSTextureLoader.cpp  Debug.cpp  Debug.h  FileBase.cpp  FileBase.h  FileDir.cpp  FileDir.h  FileLoader.cpp  FileLoader.h  Filename.h  MappedFile.cpp  MappedFile.h  Random.cpp  Random.h  StdAfx.cpp  StdAfx.h  StepTimer.h  Stl.cpp  Stl.h  TIdManager.h  Timer.cpp  Timer.h  Tokenizer-impl.hpp  Tokenizer.hpp  UnicodeUtil.cpp  UnicodeUtil.hpp  Utils.cpp  Utils.h  WICTextureLoader9.cpp  dds.h  imgui_impl_dx9.cpp  lzo.cpp  lzo.h  sha256.cpp  sha256.h  tea.cpp  tea.h  (+1 more)
Diamas Project/source/src/client/EterGrnLib/: CMakeLists.txt  GrannyLibrary.hpp  GrannyState.cpp  GrannyState.hpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelInstance.cpp  ModelInstance.h  ModelInstanceCollisionDetection.cpp  ModelInstanceModel.cpp  ModelInstanceMotion.cpp  ModelInstanceRender.cpp  ModelInstanceUpdate.cpp  ModelShader.cpp  ModelShader.h  ModelShader.inc  Motion.cpp  Motion.h  SimpleModelShader.hlsl  StdAfx.h  Thing.cpp  Thing.h  ThingInstance.cpp  ThingInstance.h  Util.cpp  Util.h
Diamas Project/source/src/client/EterLib/: AttributeData.cpp  AttributeData.h  AttributeInstance.cpp  AttributeInstance.h  BlockTexture.cpp  BlockTexture.h  CMakeLists.txt  Camera.cpp  Camera.h  CharacterEffectRegistry.cpp  CharacterEffectRegistry.hpp  ClientConfig.cpp  ClientConfig.h  CollisionData.cpp  CollisionData.h  ColorTransitionHelper.cpp  ColorTransitionHelper.h  CullingManager.cpp  CullingManager.h  Decal.cpp  Decal.h  DibBar.cpp  DibBar.h  Dimm.h  Dynamic.h  Engine.cpp  Engine.hpp  EnvironmentMap.cpp  EnvironmentMap.h  Event.h  Font.cpp  Font.hpp  FontManager.cpp  FontManager.hpp  FuncObject.h  GrpBase.cpp  GrpBase.h  GrpCollisionObject.cpp  GrpCollisionObject.h  GrpColor.cpp  (+100 more)
Diamas Project/source/src/client/EterPythonLib/: BandiVideoLibrary.cpp  BandiVideoLibrary.h  CColorPicker.cpp  CColorPicker.h  CMakeLists.txt  EditControl.cpp  EditControl.hpp  PythonGraphic.cpp  PythonGraphic.h  PythonGraphicImageModule.cpp  PythonGraphicModule.cpp  PythonGraphicTextModule.cpp  PythonGraphicThingModule.cpp  PythonGridSlotWindow.cpp  PythonGridSlotWindow.h  PythonSlotWindow.cpp  PythonSlotWindow.h  PythonWindow.cpp  PythonWindow.h  PythonWindowManager.cpp  PythonWindowManager.h  PythonWindowManagerModule.cpp  StdAfx.cpp  StdAfx.h  UIRenderer.cpp  UIRenderer.hpp  WindowType.hpp  WindowUtil.hpp
Diamas Project/source/src/client/GameLib/: ActorInstance.cpp  ActorInstance.h  ActorInstanceAttach.cpp  ActorInstanceBattle.cpp  ActorInstanceBlend.cpp  ActorInstanceCollisionDetection.cpp  ActorInstanceData.cpp  ActorInstanceEvent.cpp  ActorInstanceFly.cpp  ActorInstanceInterface.h  ActorInstanceMotion.cpp  ActorInstanceMotionEvent.cpp  ActorInstancePosition.cpp  ActorInstanceRender.cpp  ActorInstanceRotation.cpp  ActorInstanceSync.cpp  ActorInstanceWeaponTrace.cpp  Area.cpp  Area.h  AreaLoaderThread.cpp  AreaLoaderThread.h  AreaTerrain.cpp  AreaTerrain.h  CMakeLists.txt  DungeonBlock.cpp  DungeonBlock.h  EmojiManager.cpp  EmojiManager.h  EnvironmentData.cpp  EnvironmentData.hpp  EnvironmentInstance.cpp  EnvironmentInstance.hpp  EnvironmentShader.cpp  EnvironmentShader.h  FlyHandler.h  FlyTarget.cpp  FlyTarget.h  FlyTrace.cpp  FlyTrace.h  FlyingData.cpp  (+67 more)
Diamas Project/source/src/client/Main/: AuthPackets.cpp  AuthPackets.hpp  AuthSocket.cpp  AuthSocket.hpp  CMakeLists.txt  CNetworkAdapter.h  CameraProcedure.cpp  ClientItemGrid.cpp  (+143 more)
Diamas Project/source/src/server/: CMakeLists.txt
Diamas Project/source/src/share/: BuildInfo.hpp  CMakeLists.txt  Config.hpp  Direct3D.hpp  Namespaces.hpp  Services.hpp  SpdLog.hpp  StdioErrorHandlers.cpp  Version.hpp  Win32Defines.hpp  WinMsgBoxErrorHandlers.cpp  python_exe.rc  python_lib.rc  revision.txt  version.txt  version_info.rc
Diamas Project/source/src/tool/: CMakeLists.txt
NFExamples/NFServer/: CMakeLists.txt  NFServer.vcxproj
(+3883 files in other folders)
