set(SOURCE_FILES
	ActorInstance.cpp
	ActorInstance.h
	ActorInstanceAttach.cpp
	ActorInstanceBattle.cpp
	ActorInstanceBlend.cpp
	ActorInstanceCollisionDetection.cpp
	ActorInstanceData.cpp
	ActorInstanceEvent.cpp
	ActorInstanceFly.cpp
	ActorInstanceInterface.h
	ActorInstanceMotion.cpp
	ActorInstanceMotionEvent.cpp
	ActorInstancePosition.cpp
	ActorInstanceRender.cpp
	ActorInstanceRotation.cpp
	ActorInstanceSync.cpp
	ActorInstanceWeaponTrace.cpp
	AreaLoaderThread.cpp
	AreaLoaderThread.h
	Area.cpp
	Area.h
	AreaTerrain.cpp
	AreaTerrain.h
	DungeonBlock.cpp
	DungeonBlock.h
	EmojiManager.cpp
	EmojiManager.h
	EnvironmentData.cpp
	EnvironmentData.hpp
	EnvironmentInstance.cpp
	EnvironmentInstance.hpp
	EnvironmentShader.cpp
	EnvironmentShader.h
	FlyHandler.h
	FlyingData.cpp
	FlyingData.h
	FlyingInstance.cpp
	FlyingInstance.h
	FlyingObjectManager.cpp
	FlyingObjectManager.h
	FlyTarget.cpp
	FlyTarget.h
	FlyTrace.cpp
	FlyTrace.h
	GameEventManager.cpp
	GameEventManager.h
	GameType.cpp
	GameType.h
	GameUtil.cpp
	GameUtil.h
	Interface.h
	ItemData.cpp
	ItemData.h
	ItemManager.cpp
	ItemManager.h
	MapBase.cpp
	MapBase.h
	MapManager.cpp
	MapManager.h
	MapOutdoor.cpp
	MapOutdoor.h
	MapOutdoorCharacterShadow.cpp
	MapOutdoorIndexBuffer.cpp
	MapOutdoorLoad.cpp
	MapOutdoorQuadtree.cpp
	MapOutdoorRender.cpp
	MapOutdoorRenderHTP.cpp
	MapOutdoorUpdate.cpp
	MapOutdoorWater.cpp
	MapType.cpp
	MapType.h
	MapUtil.cpp
	MapUtil.h
	NpcManager.cpp
	NpcManager.h
	PhysicsObject.cpp
	PhysicsObject.h
	Property.cpp
	Property.h
	PropertyLoader.cpp
	PropertyLoader.h
	PropertyManager.cpp
	PropertyManager.h
	RaceData.cpp
	RaceData.h
	RaceDataFile.cpp
	RaceManager.cpp
	RaceManager.h
	RaceMotionData.cpp
	RaceMotionData.h
	RaceMotionDataEvent.cpp
	RaceMotionDataEvent.h
	SnowEnvironment.cpp
	SnowEnvironment.h
	SnowParticle.cpp
	SnowParticle.h
	TerrainPatch.cpp
	TerrainPatch.h
	TerrainQuadtree.cpp
	TerrainQuadtree.h
	WeaponTrace.cpp
	WeaponTrace.h
	WikiManager.cpp
	WikiManager.hpp
)

add_library(metin2client_game STATIC ${SOURCE_FILES})
target_link_libraries(metin2client_game PRIVATE metin2client_lib metin2client_granny metin2client_terrain metin2client_miles metin2client_speedtree metin2_game)
target_precompile_headers(metin2client_game PRIVATE "StdAfx.h" "StdAfx.cpp")
