

set(SOURCE_FILES
	GArena.cpp
	GArena.h
	GBanWord.cpp
	GBanWord.h
	GBattle.cpp
	GBattle.h
	battle_pass.cpp
	battle_pass.h
	BlueDragon.cpp
	BlueDragon.h
	BlueDragon_Binder.cpp
	BlueDragon_Binder.h
	BlueDragon_Skill.h
	GBufferManager.cpp
	GBufferManager.h
	buff_on_attributes.cpp
	buff_on_attributes.h
	building.cpp
	building.h
	char.cpp
	char.h
	CharUtil.cpp
	CharUtil.hpp
	char_affect.cpp
	char_battle.cpp
	char_dragonsoul.cpp
	char_party.cpp
	char_fakepc.cpp
	char_horse.cpp
	char_item.cpp
	char_manager.cpp
	char_manager.h
	char_offlineshop.cpp
	char_quickslot.cpp
	char_resist.cpp
	char_skill.cpp
	char_state.cpp
	char_mob.cpp
	char_switchbot.cpp
	char_shopsearch.cpp
	ChatUtil.cpp
	ChatUtil.hpp
	cmd.cpp
	cmd.h
	cmd_emotion.cpp
	cmd_general.cpp
	cmd_gm.cpp
	cmd_oxevent.cpp
	config.cpp
	config.h
	constants.cpp
	constants.h
	cube.cpp
	cube.h
	db.cpp
	db.h
	DbCacheSocket.cpp
	DbCacheSocket.hpp
	desc.cpp
	desc.h
	desc_manager.cpp
	desc_manager.h
	DragonSoul.cpp
	DragonSoul.h
	dungeon.cpp
	dungeon.h
	dungeon_info.cpp
	dungeon_info.h
	entity.cpp
	entity.h
	entity_view.cpp
	event.cpp
	event.h
	event_queue.cpp
	event_queue.h
	exchange.cpp
	exchange.h
	fishing.cpp
	fishing.h
	FSM.cpp
	FSM.h
	gm.cpp
	gm.h
	guild.cpp
	guild.h
	guild_manager.cpp
	guild_manager.h
	guild_war.cpp
	horsename_manager.cpp
	horsename_manager.h
	horse_rider.cpp
	horse_rider.h
	HydraDungeon.cpp
	HydraDungeon.h
	HydraConfig.h
	input.cpp
	input.h
	input_db.cpp
	input_login.cpp
	input_main.cpp
	input_main_offlineshop.cpp
	item.cpp
	item.h
	itemname_manager.cpp
	itemname_manager.h
	ItemGrid.cpp
	ItemGrid.hpp
	ItemUtils.cpp
	ItemUtils.h
	item_addon.cpp
	item_addon.h
	item_attribute.cpp
	item_manager.cpp
	item_manager.h
	item_manager_idrange.cpp
	item_manager_read_tables.cpp
	locale.cpp
	locale.hpp
	locale_service.cpp
	locale_service.h
	log.cpp
	log.h
	lua_incl.h
	lzo_manager.cpp
	lzo_manager.h
	main.cpp
	main.h
	map_location.cpp
	map_location.h
	MarkImage.cpp
	MarkImage.h
	MarkManager.cpp
	MarkManager.h
	marriage.cpp
	marriage.h
	MasterPackets.cpp
	MasterPackets.hpp
	MasterSocket.cpp
	MasterSocket.hpp
	MasterUtil.cpp
	MasterUtil.hpp
	MeleyLair.cpp
	MeleyLair.h
	messenger_manager.cpp
	messenger_manager.h
	mining.cpp
	mining.h
	mob_manager.cpp
	mob_manager.h
	motion.cpp
	motion.h
	OfflineShop.cpp
	OfflineShop.h
	OfflineShopConfig.h
	OfflineShopManager.cpp
	OfflineShopManager.h
	OnlinePlayers.cpp
	OnlinePlayers.hpp
	OXEvent.cpp
	OXEvent.h
	party.cpp
	party.h
	PetSystem.cpp
	PetSystem.h
	polymorph.cpp
	polymorph.h
	priv_manager.cpp
	priv_manager.h
	pvp.cpp
	pvp.h
	quest.h
	questevent.cpp
	questevent.h
	questlua.cpp
	questlua.h
	questlua_affect.cpp
	questlua_arena.cpp
	questlua_building.cpp
	questlua_dragonsoul.cpp
	questlua_dungeon.cpp
	questlua_dungeon_info.cpp
	questlua_forked.cpp
	questlua_game.cpp
	questlua_global.cpp
	questlua_guild.cpp
	questlua_horse.cpp
	questlua_item.cpp
	questlua_marriage.cpp
	questlua_MeleyLair.cpp
	questlua_npc.cpp
	questlua_oxevent.cpp
	questlua_party.cpp
	questlua_pc.cpp
	questlua_quest.cpp
	questlua_target.cpp
	questmanager.cpp
	questmanager.h
	questnpc.cpp
	questnpc.h
	questpc.cpp
	questpc.h
	GRefineManager.cpp
	GRefineManager.h
	regen.cpp
	regen.h
	roundalgo.h
	safebox.cpp
	safebox.h
	sectree.cpp
	sectree.h
	sectree_manager.cpp
	sectree_manager.h
	shop.cpp
	shop.h
	shop_manager.cpp
	shop_manager.h
	shop_npc.cpp
	shop_pc.cpp
	SITokenParser.h
	skill.cpp
	skill.h
	stable_priority_queue.h
	start_position.cpp
	start_position.h
	state.h
	target.cpp
	target.h
	TextTagUtil.cpp
	TextTagUtil.hpp
	threeway_war.cpp
	threeway_war.h
	trigger.cpp
	typedef.h
	utils.cpp
	utils.h
	vector.cpp
	vector.h
	vid.h
	war_map.cpp
	war_map.h
	wedding.cpp
	wedding.h
	xmas_event.cpp
	xmas_event.h
)

add_executable(metin2server_game ${SOURCE_FILES})
set_target_properties(metin2server_game PROPERTIES OUTPUT_NAME "game_server")

target_link_libraries(metin2server_game PRIVATE
		vstl
		storm
		Boost::boost
		Boost::program_options
		spdlog::spdlog
		effolkronium_random
		leaf
		bredis
		m2.shared

		metin2_base
		metin2_thecore
		metin2_game
		metin2_net
		metin2_mysql

		lz4::lz4
		lzo-pro
		lua::lua
		devil_shared
		utf8cpp
		toml11::toml11
		Microsoft.GSL::GSL
		Eigen3::Eigen
		Boost::filesystem
		cpp_redis::cpp_redis
		MySQL::client
		abseil-h
		Threads::Threads
		cppitertools::cppitertools
)

	
target_include_directories(metin2server_game PUBLIC
	${CPPITERTOOLS_ROOT}
	${DEVIL_ROOT}/include
	${METIN2_SHARE}
)

target_precompile_headers(metin2server_game PRIVATE "PrefixHeader.hpp")


if (WIN32)
	target_link_libraries(metin2server_game PRIVATE ws2_32)
else ()
	target_link_libraries(metin2server_game PRIVATE md)
endif ()